[package]
name = "budoux_rust_wrapper"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for BudouX Japanese text segmentation"
license = "Apache-2.0"
repository = "https://github.com/google/budoux"
homepage = "https://github.com/google/budoux"
documentation = "https://docs.rs/budoux_rust_wrapper"
readme = "README.md"
keywords = ["japanese", "text", "segmentation", "nlp", "budoux"]
categories = ["text-processing", "internationalization"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "budoux"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
thiserror = "1.0"

[features]
default = []
cli = ["clap"]

[dependencies.clap]
version = "4.4"
features = ["derive"]
optional = true
